--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <base target="_top">
 <title>Topster Product List</title>
+<link rel="icon" type="image/png" href="https://lh5.googleusercontent.com/d/1-W3jqJmdMVOm3VcgWSbVSlRbq3b4h5em">
 </head>
 <body>
    <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="https://script.google.com/macros/s/AKfycbxdSq-40aY04uWhaeyoP9kGdAI7TcbjH1Cfh6dDsytAiMXa48haVlyZ3rT7N_D4V1B4Xg/exec"></iframe>
