--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <base target="_top">
-<title>Topster Product List</title>
+<title>Topster Product Search</title>
 <link rel="icon" type="image/png" href="https://lh5.googleusercontent.com/d/1-W3jqJmdMVOm3VcgWSbVSlRbq3b4h5em">
 </head>
 <body>
