--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <link rel="icon" type="image/png" href="https://lh5.googleusercontent.com/d/1-W3jqJmdMVOm3VcgWSbVSlRbq3b4h5em">
 </head>
 <body>
-   <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="https://script.google.com/macros/s/AKfycbxdSq-40aY04uWhaeyoP9kGdAI7TcbjH1Cfh6dDsytAiMXa48haVlyZ3rT7N_D4V1B4Xg/exec"></iframe>
+   <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;" src="https://script.google.com/macros/s/AKfycbxdSq-40aY04uWhaeyoP9kGdAI7TcbjH1Cfh6dDsytAiMXa48haVlyZ3rT7N_D4V1B4Xg/exec" allow="clipboard-write"></iframe>
 </body>
 </html>
